# bitget_rate_reaper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitget.cpp  bitget.h  config.example.properties  data.h  defines.h  fundingratemonitor.cpp  fundingratemonitor.h  main.cpp  strategy.cpp  strategy.h  strategymanager.cpp  strategymanager.h  tracer.cpp  tracer.h  util.cpp  util.h
